# didclaw

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md
didclaw-ui/: .env.example  .env.production.example  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
didclaw-ui/src-tauri/: Cargo.toml  tauri.build.conf.json  tauri.conf.json  tauri.dev.conf.json
didclaw-ui/src-tauri/capabilities/: default.json  dev.json
didclaw-ui/src-tauri/icons/: icon.icns
didclaw-ui/src-tauri/permissions/: didclaw.toml
didclaw-ui/src-tauri/src/: app_locale.rs  bundled_skills.rs  command_registration.rs  commands.rs  didclaw_db.rs  didclaw_update.rs  gateway_local.rs  general_settings.rs  launch_log.rs  lib.rs  live_edit_patch.rs  openclaw_agents_config.rs  openclaw_ai_snapshot.rs  openclaw_common.rs  openclaw_company_roster_skill.rs  openclaw_exec_approvals_defaults.rs  openclaw_gateway.rs  openclaw_gateway_origins.rs  openclaw_model_config.rs  openclaw_providers.rs  openclaw_skill_config.rs  openclaw_tools_agent_to_agent.rs  openclaw_workspace_memory.rs  pheromone.rs  preview_local.rs  setup_status.rs  skills.rs  tauri_user_error.rs  tray_icon.rs
docs/: OpenClaw-顶层界面-开发方案.md  SESSION-CONTEXT.md  ai-config-demo.html  channel-panel-demo.html  didclaw-electron-local-preview.md  didclaw-electron-to-tauri-迁移计划.md  didclaw-engineering-improvements.md  didclaw-logo-concepts.html  (+41 more)
lclaw-ui/src-tauri/: Cargo.toml  tauri.conf.json
lclaw-ui/src-tauri/capabilities/: default.json  dev.json
lclaw-ui/src-tauri/permissions/: didclaw.toml  lclaw.toml
lclaw-ui/src-tauri/src/: app_locale.rs  commands.rs  didclaw_db.rs  gateway_local.rs  gateway_tunnel.rs  global_shortcut.rs  launch_log.rs  lib.rs  oauth_providers.rs  openclaw_backup.rs  openclaw_channel_config.rs  openclaw_clawhub.rs  openclaw_common.rs  openclaw_ensure_install.rs  openclaw_gateway.rs  openclaw_gateway_origins.rs  openclaw_model_config.rs  openclaw_providers.rs  openclaw_version_check.rs  paths.rs  preview_local.rs  setup_status.rs  skills.rs  static_server.rs  tray_icon.rs  workspace_identity.rs
(+310 files in other folders)
