[package]
name = "app"
version = "0.8.4"
description = "DidClaw"
authors = ["DidClaw"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time", "process", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
url = "2.5"
rfd = "0.15"
open = "5"
arboard = "3"
base64 = "0.22"
tempfile = "3"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
ureq = { version = "2.10", features = ["json"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3.2"
