[package]
name = "app"
version = "0.2.0"
description = "LCLAW UI"
authors = ["LCLAW"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
url = "2.5"
rfd = "0.15"
open = "5"
arboard = "3"
base64 = "0.22"
tempfile = "3"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
